# mcm_2026_d

./: .gitignore  README.md  general_solution.md  model_general.md  nn_solution.md  nn_solution_zh.md  plots.md  problem.md  problem_zh.md  pyproject.toml  traditional_solution.md  train_strategy.md
data/raw/bref/pool/: pool_2022.csv  pool_2023.csv  pool_2024.csv
datasets/: instances.jsonl  pairs.jsonl  pairs_mixed.jsonl  solutions.jsonl  summary.csv
datasets_backup/nn_runs/ab3b_constraint_shadow_cost_critic_adam_lrsmall_es8_e100_bs32/: config.json
docs/figures/nn/ab3b_constraint_shadow_cost_critic_adam_lrsmall_es8_e100_bs32/: metrics.jsonl
src/mcm_2026_d/: __init__.py  cli.py  dataset.py  generate.py  math_utils.py  mixed_generate.py  schemas.py  solver.py
src/mcm_2026_d/nn/: __init__.py  data.py  env.py  eval.py  masks.py  model.py  plots.py  train.py
src/mcm_2026_d/realdata/: __init__.py  bref_wnba.py
thesis/: Makefile  letterwork.tex  mcm_ai_report.tex  mcm_thesis_work_1.bbl  mcm_thesis_work_1.tex  references.bib
thesis/datasets_backup/datasets_backup/nn_runs/ab3b_constraint_shadow_cost_critic_adam_lrsmall_es8_e100_bs32/: run_eval_metrics.jsonl  val_opt_u11.jsonl  val_opt_u13.jsonl
